Add webui + gguf hash matching
